<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_map">




    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wheel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.wheel.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/map_fragment"/>
    <fragment
        android:id="@+id/nav_access"
        android:name="com.example.wheel.ui.accessibility.AccessibiliteFragment"
        android:label="@string/menu_access"
        tools:layout="@layout/accessibilite_fragment" />
    <fragment
        android:id="@+id/nav_search_foundation"
        android:name="com.example.wheel.ui.foundation.SearchEtablissementFragment"
        android:label="@string/menu_search_foundation"
        tools:layout="@layout/search_etablissement_fragment" />
    <fragment
        android:id="@+id/nav_ask_help"
        android:name="com.example.wheel.ui.askhelp.AskHelpFragment"
        android:label="@string/menu_ask_help"
        tools:layout="@layout/ask_help_fragment" />
    <fragment
        android:id="@+id/nav_demandedon"
        android:name="com.example.wheel.ui.don.ListDonFragment"
        android:label="@string/demandedons"
        tools:layout="@layout/list_don_fragment" />
    <fragment
        android:id="@+id/nav_don"
        android:name="com.example.wheel.ui.don.Don"
        android:label="@string/dons"
        tools:layout="@layout/dons_fragment" />
    <fragment
        android:id="@+id/nav_list_don"
        android:name="com.example.wheel.ui.don.AjouterDon"
        android:label="@string/ajoutdon"
        tools:layout="@layout/ajouter_don_fragment" />
    <fragment
        android:id="@+id/nav_list_association"
        android:name="com.example.wheel.ui.association.AssociationFragment"
        android:label="@string/menu_list_association"
        tools:layout="@layout/association_fragment" />


    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.wheel.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>