<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_access"
            android:icon="@drawable/ic_add_location"
            android:title="@string/menu_access" />
        <item
            android:id="@+id/nav_search_foundation"
            android:icon="@drawable/ic_menu_foundation"
            android:title="@string/menu_search_foundation" />
        <item
            android:id="@+id/nav_demandedon"
            android:icon="@drawable/ic_wheelchair"
            android:title="@string/demandedons" />
        <item
            android:id="@+id/nav_list_don"
            android:icon="@drawable/ic_wheelchair"
            android:title="@string/dons" />
        <item
            android:id="@+id/nav_list_demande_don"
            android:icon="@drawable/ic_wheelchair"
            android:title="@string/m_list_demande_don" />
        <item
            android:id="@+id/nav_list_association"
            android:icon="@drawable/ic_people_outline"
            android:title="@string/menu_list_association" />
        <item
            android:id="@+id/nav_ask_help"
            android:icon="@drawable/ic_menu_live_help"
            android:title="@string/menu_ask_help" />
    </group>
</menu>
